# lazybids-ui

./: .env  .gitignore  404.html  Dockerfile  README.md  docker-compose.yml  index.html  main.py  mkdocs.yml  openapi.json  package-lock.json  package.json  pyproject.toml
.github/workflows/: mkdocs.yml  python-publish.yml
docs/: index.md  openapi.json  scalar.html
lazybids_ui/: main.py
lazybids_ui/src/: html_api.py
lazybids_ui/static/: niivue.umd.js
lazybids_ui/templates/: root.html
lazybids_ui/templates/components/: dataset_card.html  dataset_view.html  datasets.html  error.html  session_view.html  subject_view.html
search/: search_index.json
src/: models.py  random_image.py  rest_api.py  worker.py
static/: empty.html
templates/: root.html
templates/components/: create_dataset.html  dataset_card.html  dataset_header.html  dataset_view.html  datasets.html  error.html  experiment_view.html  header.html  products.html  products_delayed.html  products_empty.html  products_loading.html  redirect_home.html  scans.html  session_view.html  subject_view.html  table.html  test.html  youtube.html  yt_carousel.html
